serialize with data and count
